web-infras/parser/tests/fixtures/babel/es2022/private-in/private-binary-expression-left/output.txt
[SyntaxError]: Private names are only allowed in property accesses (`obj.#private`) or in `in` expressions (`#private in obj`). (4,5)
4|    #x + 1;
 |   ^
